# test_dea

./: .gitignore  README.md  pyproject.toml
.github/workflows/: etl_pipeline.yml
src/etl_pipeline/: extractor.py  loader.py  main.py  report.py  transformer.py
src/etl_pipeline/output/: agg_result.db  top_clients.xlsx
